; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_should_validate_cache_entries.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_should_validate_cache_entries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@should_validate_cache_entries.validate_index_cache_entries = internal global i32 -1, align 4
@.str = private unnamed_addr constant [38 x i8] c"GIT_TEST_VALIDATE_INDEX_CACHE_ENTRIES\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @should_validate_cache_entries() #0 {
  %1 = load i32, i32* @should_validate_cache_entries.validate_index_cache_entries, align 4
  %2 = icmp slt i32 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = call i64 @getenv(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %3
  store i32 1, i32* @should_validate_cache_entries.validate_index_cache_entries, align 4
  br label %8

7:                                                ; preds = %3
  store i32 0, i32* @should_validate_cache_entries.validate_index_cache_entries, align 4
  br label %8

8:                                                ; preds = %7, %6
  br label %9

9:                                                ; preds = %8, %0
  %10 = load i32, i32* @should_validate_cache_entries.validate_index_cache_entries, align 4
  ret i32 %10
}

declare dso_local i64 @getenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
